# platform.core.security.secure-storage

./: AUTHORS  CMakeLists.txt  LICENSE  config.in  project.config  secure-storage.pc.in  ss-server.manifest  ss-serverd
TC/: build.sh  execute.sh  tet_scen  tetbuild.cfg  tetclean.cfg  tetexec.cfg
TC/scenario1/: Makefile  tslist  utc_SecurityFW_ssm_delete_file_func.c  utc_SecurityFW_ssm_getinfo_func.c  utc_SecurityFW_ssm_read_func.c  utc_SecurityFW_ssm_write_buffer_func.c  utc_SecurityFW_ssm_write_file_func.c
client/include/: ss_client_intf.h  ss_client_ipc.h
client/src/: ss_client_intf.c  ss_client_ipc.c  ss_manager.c
debian/: changelog  control  libss-client-0.install.in  libss-client-0.postinst  libss-client-dev.install.in  rules  ss-server.install.in  ss-server.postinst
include/: secure_storage.h  ss_manager.h
packaging/: secure-storage.changes  secure-storage.service  secure-storage.spec
server/include/: ss_server_ipc.h  ss_server_main.h
server/src/: ss_server_ipc.c  ss_server_main.c
systemd/: secure-storage.service  secure-storage.socket
tests/: ss_client_tests.c
